new jira location

--- a/contribute.html
+++ b/contribute.html
@@ -57,7 +57,7 @@ name: contribute
 	
 	<h3>Reporting Bugs</h3>
 	<p>
-	We use <a href="http://linkedin.jira.com/browse/SENSEI">Jira</a> for issue tracking.
+	We use <a href="https://senseidb.atlassian.net/browse/SENSEI">Jira</a> for issue tracking.
 	</p>
 	<p>
 		Bug reports are incredibly helpful, so take time to report bugs and request features in our ticket tracker. We are always grateful for patches to Sensei’s code.
